# MutPred2_DB

./: .gitignore  01_create_tables_populate_phase2.py  README.md  initialize_sequence_and_mapping_tables.py  insert_job_results.py  plot.py  process_job.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
models/: feature_set.py  features_conservation.py  features_function.py  features_homology.py  features_pssm.py  features_sequence.py  features_structure.py  features_substitution.py  job_processor.py  mechanism.py  motif.py  mutation.py  output_record.py  run_options.py  sequence.py  sequence_mapping.py  sql_connection.py  variant.py
mutpred2_db/: process_job.py
mutpred2_db/models/: feature_set.py  features_conservation.py  features_homology.py  features_structure.py  job_processor.py  output_record.py  sequence.py  sql_connection.py
scripts/: create_job_insert_file.py  create_mane_insert_file.py
sql/: building_tables.sql
sql_queries/: get_finished_genes.sql
statistics/: finished_proteins_03_21_24.txt  query_count_results_03_21_24.txt
utils/: sql_connection.py
